// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Carousel/items dynamic items 1`] = `
<div
  data-css-x7zjce=""
  data-testid="story-wrapper"
>
  <div
    data-css-rumlay=""
  >
    <ul
      aria-describedby="carousel-4__instructions"
      aria-label="carousel"
      data-css-1ltsxrp=""
      id="carousel-4"
      onKeyDown={[Function]}
      role="region"
      tabIndex="0"
    >
      <li
        data-css-bxro55=""
        data-css-qkb1g2=""
      >
        <div
          data-css-1gthxiq=""
        >
          <div
            data-css-1oosafx=""
            data-testid="mock-item"
          >
            item: 
            1
          </div>
        </div>
      </li>
      <li
        aria-hidden={true}
        data-css-bxro55=""
        data-css-qkb1g2=""
        tabIndex={-1}
      >
        <div
          data-css-1gthxiq=""
        >
          <div
            data-css-1oosafx=""
            data-testid="mock-item"
          >
            item: 
            2
          </div>
        </div>
      </li>
      <li
        aria-hidden={true}
        data-css-bxro55=""
        data-css-qkb1g2=""
        tabIndex={-1}
      >
        <div
          data-css-1gthxiq=""
        >
          <div
            data-css-1oosafx=""
            data-testid="mock-item"
          >
            item: 
            3
          </div>
        </div>
      </li>
      <li
        aria-hidden={true}
        data-css-bxro55=""
        data-css-qkb1g2=""
        tabIndex={-1}
      >
        <div
          data-css-1gthxiq=""
        >
          <div
            data-css-1oosafx=""
            data-testid="mock-item"
          >
            item: 
            4
          </div>
        </div>
      </li>
    </ul>
    <ul
      aria-controls="carousel-4"
      aria-label="carousel controls"
      data-css-b3afd4=""
    >
      <li>
        <button
          aria-label="next"
          data-css-qnd08l=""
          onClick={[Function]}
        >
          <div
            aria-hidden={true}
            data-css-otejxm=""
          >
            <svg
              aria-label="caret right icon"
              role="img"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M16 12l-5-5-1.41 1.41L13.17 12l-3.58 3.59L11 17"
              />
            </svg>
          </div>
        </button>
      </li>
    </ul>
    <div
      data-css-6wu9td=""
      id="carousel-4__instructions"
    >
      <p>
        use your arrow keys for more
      </p>
    </div>
  </div>
  <div
    data-css-18ma6i3=""
  >
    <button
      disabled={false}
      onClick={[Function]}
    >
      remove
    </button>
    <button
      onClick={[Function]}
    >
      add
    </button>
  </div>
</div>
`;

exports[`Storyshots Carousel/items many items 1`] = `
<div
  data-css-x7zjce=""
  data-testid="story-wrapper"
>
  <div
    data-css-rumlay=""
  >
    <ul
      aria-describedby="carousel-3__instructions"
      aria-label="carousel"
      data-css-1ltsxrp=""
      id="carousel-3"
      onKeyDown={[Function]}
      role="region"
      tabIndex="0"
    >
      <li
        data-css-bxro55=""
        data-css-qkb1g2=""
      >
        <div
          data-css-1gthxiq=""
        >
          <div
            data-css-1oosafx=""
            data-testid="mock-item"
          >
            item: 
            1
          </div>
        </div>
      </li>
      <li
        aria-hidden={true}
        data-css-bxro55=""
        data-css-qkb1g2=""
        tabIndex={-1}
      >
        <div
          data-css-1gthxiq=""
        >
          <div
            data-css-1oosafx=""
            data-testid="mock-item"
          >
            item: 
            2
          </div>
        </div>
      </li>
      <li
        aria-hidden={true}
        data-css-bxro55=""
        data-css-qkb1g2=""
        tabIndex={-1}
      >
        <div
          data-css-1gthxiq=""
        >
          <div
            data-css-1oosafx=""
            data-testid="mock-item"
          >
            item: 
            3
          </div>
        </div>
      </li>
      <li
        aria-hidden={true}
        data-css-bxro55=""
        data-css-qkb1g2=""
        tabIndex={-1}
      >
        <div
          data-css-1gthxiq=""
        >
          <div
            data-css-1oosafx=""
            data-testid="mock-item"
          >
            item: 
            4
          </div>
        </div>
      </li>
      <li
        aria-hidden={true}
        data-css-bxro55=""
        data-css-qkb1g2=""
        tabIndex={-1}
      >
        <div
          data-css-1gthxiq=""
        >
          <div
            data-css-1oosafx=""
            data-testid="mock-item"
          >
            item: 
            5
          </div>
        </div>
      </li>
      <li
        aria-hidden={true}
        data-css-bxro55=""
        data-css-qkb1g2=""
        tabIndex={-1}
      >
        <div
          data-css-1gthxiq=""
        >
          <div
            data-css-1oosafx=""
            data-testid="mock-item"
          >
            item: 
            6
          </div>
        </div>
      </li>
      <li
        aria-hidden={true}
        data-css-bxro55=""
        data-css-qkb1g2=""
        tabIndex={-1}
      >
        <div
          data-css-1gthxiq=""
        >
          <div
            data-css-1oosafx=""
            data-testid="mock-item"
          >
            item: 
            7
          </div>
        </div>
      </li>
      <li
        aria-hidden={true}
        data-css-bxro55=""
        data-css-qkb1g2=""
        tabIndex={-1}
      >
        <div
          data-css-1gthxiq=""
        >
          <div
            data-css-1oosafx=""
            data-testid="mock-item"
          >
            item: 
            8
          </div>
        </div>
      </li>
      <li
        aria-hidden={true}
        data-css-bxro55=""
        data-css-qkb1g2=""
        tabIndex={-1}
      >
        <div
          data-css-1gthxiq=""
        >
          <div
            data-css-1oosafx=""
            data-testid="mock-item"
          >
            item: 
            9
          </div>
        </div>
      </li>
      <li
        aria-hidden={true}
        data-css-bxro55=""
        data-css-qkb1g2=""
        tabIndex={-1}
      >
        <div
          data-css-1gthxiq=""
        >
          <div
            data-css-1oosafx=""
            data-testid="mock-item"
          >
            item: 
            10
          </div>
        </div>
      </li>
      <li
        aria-hidden={true}
        data-css-bxro55=""
        data-css-qkb1g2=""
        tabIndex={-1}
      >
        <div
          data-css-1gthxiq=""
        >
          <div
            data-css-1oosafx=""
            data-testid="mock-item"
          >
            item: 
            11
          </div>
        </div>
      </li>
      <li
        aria-hidden={true}
        data-css-bxro55=""
        data-css-qkb1g2=""
        tabIndex={-1}
      >
        <div
          data-css-1gthxiq=""
        >
          <div
            data-css-1oosafx=""
            data-testid="mock-item"
          >
            item: 
            12
          </div>
        </div>
      </li>
      <li
        aria-hidden={true}
        data-css-bxro55=""
        data-css-qkb1g2=""
        tabIndex={-1}
      >
        <div
          data-css-1gthxiq=""
        >
          <div
            data-css-1oosafx=""
            data-testid="mock-item"
          >
            item: 
            13
          </div>
        </div>
      </li>
      <li
        aria-hidden={true}
        data-css-bxro55=""
        data-css-qkb1g2=""
        tabIndex={-1}
      >
        <div
          data-css-1gthxiq=""
        >
          <div
            data-css-1oosafx=""
            data-testid="mock-item"
          >
            item: 
            14
          </div>
        </div>
      </li>
      <li
        aria-hidden={true}
        data-css-bxro55=""
        data-css-qkb1g2=""
        tabIndex={-1}
      >
        <div
          data-css-1gthxiq=""
        >
          <div
            data-css-1oosafx=""
            data-testid="mock-item"
          >
            item: 
            15
          </div>
        </div>
      </li>
      <li
        aria-hidden={true}
        data-css-bxro55=""
        data-css-qkb1g2=""
        tabIndex={-1}
      >
        <div
          data-css-1gthxiq=""
        >
          <div
            data-css-1oosafx=""
            data-testid="mock-item"
          >
            item: 
            16
          </div>
        </div>
      </li>
      <li
        aria-hidden={true}
        data-css-bxro55=""
        data-css-qkb1g2=""
        tabIndex={-1}
      >
        <div
          data-css-1gthxiq=""
        >
          <div
            data-css-1oosafx=""
            data-testid="mock-item"
          >
            item: 
            17
          </div>
        </div>
      </li>
      <li
        aria-hidden={true}
        data-css-bxro55=""
        data-css-qkb1g2=""
        tabIndex={-1}
      >
        <div
          data-css-1gthxiq=""
        >
          <div
            data-css-1oosafx=""
            data-testid="mock-item"
          >
            item: 
            18
          </div>
        </div>
      </li>
      <li
        aria-hidden={true}
        data-css-bxro55=""
        data-css-qkb1g2=""
        tabIndex={-1}
      >
        <div
          data-css-1gthxiq=""
        >
          <div
            data-css-1oosafx=""
            data-testid="mock-item"
          >
            item: 
            19
          </div>
        </div>
      </li>
      <li
        aria-hidden={true}
        data-css-bxro55=""
        data-css-qkb1g2=""
        tabIndex={-1}
      >
        <div
          data-css-1gthxiq=""
        >
          <div
            data-css-1oosafx=""
            data-testid="mock-item"
          >
            item: 
            20
          </div>
        </div>
      </li>
      <li
        aria-hidden={true}
        data-css-bxro55=""
        data-css-qkb1g2=""
        tabIndex={-1}
      >
        <div
          data-css-1gthxiq=""
        >
          <div
            data-css-1oosafx=""
            data-testid="mock-item"
          >
            item: 
            21
          </div>
        </div>
      </li>
    </ul>
    <ul
      aria-controls="carousel-3"
      aria-label="carousel controls"
      data-css-b3afd4=""
    >
      <li>
        <button
          aria-label="next"
          data-css-qnd08l=""
          onClick={[Function]}
        >
          <div
            aria-hidden={true}
            data-css-otejxm=""
          >
            <svg
              aria-label="caret right icon"
              role="img"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M16 12l-5-5-1.41 1.41L13.17 12l-3.58 3.59L11 17"
              />
            </svg>
          </div>
        </button>
      </li>
    </ul>
    <div
      data-css-6wu9td=""
      id="carousel-3__instructions"
    >
      <p>
        use your arrow keys for more
      </p>
    </div>
  </div>
</div>
`;

exports[`Storyshots Carousel/items one item 1`] = `
<div
  data-css-x7zjce=""
  data-testid="story-wrapper"
>
  <div
    data-css-rumlay=""
  >
    <ul
      aria-describedby="carousel-1__instructions"
      aria-label="carousel"
      data-css-1ltsxrp=""
      id="carousel-1"
      onKeyDown={[Function]}
      role="region"
      tabIndex="0"
    >
      <li
        data-css-bxro55=""
        data-css-qkb1g2=""
      >
        <div
          data-css-1gthxiq=""
        >
          <div
            data-css-1oosafx=""
            data-testid="mock-item"
          >
            just one item
          </div>
        </div>
      </li>
    </ul>
    <ul
      aria-controls="carousel-1"
      aria-label="carousel controls"
      data-css-b3afd4=""
    />
    <div
      data-css-6wu9td=""
      id="carousel-1__instructions"
    >
      <p>
        use your arrow keys for more
      </p>
    </div>
  </div>
</div>
`;

exports[`Storyshots Carousel/items two items 1`] = `
<div
  data-css-x7zjce=""
  data-testid="story-wrapper"
>
  <div
    data-css-rumlay=""
  >
    <ul
      aria-describedby="carousel-2__instructions"
      aria-label="carousel"
      data-css-1ltsxrp=""
      id="carousel-2"
      onKeyDown={[Function]}
      role="region"
      tabIndex="0"
    >
      <li
        data-css-bxro55=""
        data-css-qkb1g2=""
      >
        <div
          data-css-1gthxiq=""
        >
          <div
            data-css-1oosafx=""
            data-testid="mock-item"
          >
            first item
          </div>
        </div>
      </li>
      <li
        aria-hidden={true}
        data-css-bxro55=""
        data-css-qkb1g2=""
        tabIndex={-1}
      >
        <div
          data-css-1gthxiq=""
        >
          <div
            data-css-1oosafx=""
            data-testid="mock-item"
          >
            second item
          </div>
        </div>
      </li>
    </ul>
    <ul
      aria-controls="carousel-2"
      aria-label="carousel controls"
      data-css-b3afd4=""
    >
      <li>
        <button
          aria-label="next"
          data-css-qnd08l=""
          onClick={[Function]}
        >
          <div
            aria-hidden={true}
            data-css-otejxm=""
          >
            <svg
              aria-label="caret right icon"
              role="img"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M16 12l-5-5-1.41 1.41L13.17 12l-3.58 3.59L11 17"
              />
            </svg>
          </div>
        </button>
      </li>
    </ul>
    <div
      data-css-6wu9td=""
      id="carousel-2__instructions"
    >
      <p>
        use your arrow keys for more
      </p>
    </div>
  </div>
</div>
`;

exports[`Storyshots Carousel/size narrow 1`] = `
<div
  data-css-x7zjce=""
  data-testid="story-wrapper"
>
  <div
    data-css-rumlay=""
  >
    <ul
      aria-describedby="carousel-5__instructions"
      aria-label="carousel"
      data-css-1ltsxrp=""
      id="carousel-5"
      onKeyDown={[Function]}
      role="region"
      tabIndex="0"
    >
      <li
        data-css-bxro55=""
        data-css-qkb1g2=""
      >
        <div
          data-css-1gthxiq=""
        >
          <div
            data-css-1oosafx=""
            data-testid="mock-item"
          >
            item: 
            1
          </div>
        </div>
      </li>
      <li
        aria-hidden={true}
        data-css-bxro55=""
        data-css-qkb1g2=""
        tabIndex={-1}
      >
        <div
          data-css-1gthxiq=""
        >
          <div
            data-css-1oosafx=""
            data-testid="mock-item"
          >
            item: 
            2
          </div>
        </div>
      </li>
      <li
        aria-hidden={true}
        data-css-bxro55=""
        data-css-qkb1g2=""
        tabIndex={-1}
      >
        <div
          data-css-1gthxiq=""
        >
          <div
            data-css-1oosafx=""
            data-testid="mock-item"
          >
            item: 
            3
          </div>
        </div>
      </li>
      <li
        aria-hidden={true}
        data-css-bxro55=""
        data-css-qkb1g2=""
        tabIndex={-1}
      >
        <div
          data-css-1gthxiq=""
        >
          <div
            data-css-1oosafx=""
            data-testid="mock-item"
          >
            item: 
            4
          </div>
        </div>
      </li>
      <li
        aria-hidden={true}
        data-css-bxro55=""
        data-css-qkb1g2=""
        tabIndex={-1}
      >
        <div
          data-css-1gthxiq=""
        >
          <div
            data-css-1oosafx=""
            data-testid="mock-item"
          >
            item: 
            5
          </div>
        </div>
      </li>
      <li
        aria-hidden={true}
        data-css-bxro55=""
        data-css-qkb1g2=""
        tabIndex={-1}
      >
        <div
          data-css-1gthxiq=""
        >
          <div
            data-css-1oosafx=""
            data-testid="mock-item"
          >
            item: 
            6
          </div>
        </div>
      </li>
      <li
        aria-hidden={true}
        data-css-bxro55=""
        data-css-qkb1g2=""
        tabIndex={-1}
      >
        <div
          data-css-1gthxiq=""
        >
          <div
            data-css-1oosafx=""
            data-testid="mock-item"
          >
            item: 
            7
          </div>
        </div>
      </li>
      <li
        aria-hidden={true}
        data-css-bxro55=""
        data-css-qkb1g2=""
        tabIndex={-1}
      >
        <div
          data-css-1gthxiq=""
        >
          <div
            data-css-1oosafx=""
            data-testid="mock-item"
          >
            item: 
            8
          </div>
        </div>
      </li>
      <li
        aria-hidden={true}
        data-css-bxro55=""
        data-css-qkb1g2=""
        tabIndex={-1}
      >
        <div
          data-css-1gthxiq=""
        >
          <div
            data-css-1oosafx=""
            data-testid="mock-item"
          >
            item: 
            9
          </div>
        </div>
      </li>
      <li
        aria-hidden={true}
        data-css-bxro55=""
        data-css-qkb1g2=""
        tabIndex={-1}
      >
        <div
          data-css-1gthxiq=""
        >
          <div
            data-css-1oosafx=""
            data-testid="mock-item"
          >
            item: 
            10
          </div>
        </div>
      </li>
      <li
        aria-hidden={true}
        data-css-bxro55=""
        data-css-qkb1g2=""
        tabIndex={-1}
      >
        <div
          data-css-1gthxiq=""
        >
          <div
            data-css-1oosafx=""
            data-testid="mock-item"
          >
            item: 
            11
          </div>
        </div>
      </li>
      <li
        aria-hidden={true}
        data-css-bxro55=""
        data-css-qkb1g2=""
        tabIndex={-1}
      >
        <div
          data-css-1gthxiq=""
        >
          <div
            data-css-1oosafx=""
            data-testid="mock-item"
          >
            item: 
            12
          </div>
        </div>
      </li>
      <li
        aria-hidden={true}
        data-css-bxro55=""
        data-css-qkb1g2=""
        tabIndex={-1}
      >
        <div
          data-css-1gthxiq=""
        >
          <div
            data-css-1oosafx=""
            data-testid="mock-item"
          >
            item: 
            13
          </div>
        </div>
      </li>
    </ul>
    <ul
      aria-controls="carousel-5"
      aria-label="carousel controls"
      data-css-b3afd4=""
    >
      <li>
        <button
          aria-label="next"
          data-css-qnd08l=""
          onClick={[Function]}
        >
          <div
            aria-hidden={true}
            data-css-otejxm=""
          >
            <svg
              aria-label="caret right icon"
              role="img"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M16 12l-5-5-1.41 1.41L13.17 12l-3.58 3.59L11 17"
              />
            </svg>
          </div>
        </button>
      </li>
    </ul>
    <div
      data-css-6wu9td=""
      id="carousel-5__instructions"
    >
      <p>
        use your arrow keys for more
      </p>
    </div>
  </div>
</div>
`;

exports[`Storyshots Carousel/size wide 1`] = `
<div
  data-css-x7zjce=""
  data-testid="story-wrapper"
>
  <div
    data-css-rumlay=""
  >
    <ul
      aria-describedby="carousel-6__instructions"
      aria-label="carousel"
      data-css-1ltsxrp=""
      id="carousel-6"
      onKeyDown={[Function]}
      role="region"
      tabIndex="0"
    >
      <li
        data-css-bxro55=""
        data-css-qkb1g2=""
      >
        <div
          data-css-1gthxiq=""
        >
          <div
            data-css-1oosafx=""
            data-testid="mock-item"
          >
            item: 
            1
          </div>
        </div>
      </li>
      <li
        aria-hidden={true}
        data-css-bxro55=""
        data-css-qkb1g2=""
        tabIndex={-1}
      >
        <div
          data-css-1gthxiq=""
        >
          <div
            data-css-1oosafx=""
            data-testid="mock-item"
          >
            item: 
            2
          </div>
        </div>
      </li>
      <li
        aria-hidden={true}
        data-css-bxro55=""
        data-css-qkb1g2=""
        tabIndex={-1}
      >
        <div
          data-css-1gthxiq=""
        >
          <div
            data-css-1oosafx=""
            data-testid="mock-item"
          >
            item: 
            3
          </div>
        </div>
      </li>
      <li
        aria-hidden={true}
        data-css-bxro55=""
        data-css-qkb1g2=""
        tabIndex={-1}
      >
        <div
          data-css-1gthxiq=""
        >
          <div
            data-css-1oosafx=""
            data-testid="mock-item"
          >
            item: 
            4
          </div>
        </div>
      </li>
      <li
        aria-hidden={true}
        data-css-bxro55=""
        data-css-qkb1g2=""
        tabIndex={-1}
      >
        <div
          data-css-1gthxiq=""
        >
          <div
            data-css-1oosafx=""
            data-testid="mock-item"
          >
            item: 
            5
          </div>
        </div>
      </li>
      <li
        aria-hidden={true}
        data-css-bxro55=""
        data-css-qkb1g2=""
        tabIndex={-1}
      >
        <div
          data-css-1gthxiq=""
        >
          <div
            data-css-1oosafx=""
            data-testid="mock-item"
          >
            item: 
            6
          </div>
        </div>
      </li>
      <li
        aria-hidden={true}
        data-css-bxro55=""
        data-css-qkb1g2=""
        tabIndex={-1}
      >
        <div
          data-css-1gthxiq=""
        >
          <div
            data-css-1oosafx=""
            data-testid="mock-item"
          >
            item: 
            7
          </div>
        </div>
      </li>
      <li
        aria-hidden={true}
        data-css-bxro55=""
        data-css-qkb1g2=""
        tabIndex={-1}
      >
        <div
          data-css-1gthxiq=""
        >
          <div
            data-css-1oosafx=""
            data-testid="mock-item"
          >
            item: 
            8
          </div>
        </div>
      </li>
      <li
        aria-hidden={true}
        data-css-bxro55=""
        data-css-qkb1g2=""
        tabIndex={-1}
      >
        <div
          data-css-1gthxiq=""
        >
          <div
            data-css-1oosafx=""
            data-testid="mock-item"
          >
            item: 
            9
          </div>
        </div>
      </li>
      <li
        aria-hidden={true}
        data-css-bxro55=""
        data-css-qkb1g2=""
        tabIndex={-1}
      >
        <div
          data-css-1gthxiq=""
        >
          <div
            data-css-1oosafx=""
            data-testid="mock-item"
          >
            item: 
            10
          </div>
        </div>
      </li>
      <li
        aria-hidden={true}
        data-css-bxro55=""
        data-css-qkb1g2=""
        tabIndex={-1}
      >
        <div
          data-css-1gthxiq=""
        >
          <div
            data-css-1oosafx=""
            data-testid="mock-item"
          >
            item: 
            11
          </div>
        </div>
      </li>
      <li
        aria-hidden={true}
        data-css-bxro55=""
        data-css-qkb1g2=""
        tabIndex={-1}
      >
        <div
          data-css-1gthxiq=""
        >
          <div
            data-css-1oosafx=""
            data-testid="mock-item"
          >
            item: 
            12
          </div>
        </div>
      </li>
      <li
        aria-hidden={true}
        data-css-bxro55=""
        data-css-qkb1g2=""
        tabIndex={-1}
      >
        <div
          data-css-1gthxiq=""
        >
          <div
            data-css-1oosafx=""
            data-testid="mock-item"
          >
            item: 
            13
          </div>
        </div>
      </li>
    </ul>
    <ul
      aria-controls="carousel-6"
      aria-label="carousel controls"
      data-css-b3afd4=""
    >
      <li>
        <button
          aria-label="next"
          data-css-qnd08l=""
          onClick={[Function]}
        >
          <div
            aria-hidden={true}
            data-css-otejxm=""
          >
            <svg
              aria-label="caret right icon"
              role="img"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M16 12l-5-5-1.41 1.41L13.17 12l-3.58 3.59L11 17"
              />
            </svg>
          </div>
        </button>
      </li>
    </ul>
    <div
      data-css-6wu9td=""
      id="carousel-6__instructions"
    >
      <p>
        use your arrow keys for more
      </p>
    </div>
  </div>
</div>
`;
